--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -1,5 +1,5 @@
 .chat {
-    background-color: rgb(0, 255, 119);
+    background-color: #ED7D15;
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -11,8 +11,9 @@
     width: 300px;
     height: 100%;
     overflow-y: auto;
-    border: 1px solid #ccc;
+    border-top: 1px solid black;
     word-wrap: break-word;
+    padding-top: 5px;
 
 }
 
@@ -22,23 +23,54 @@
     overflow-y: visible;
 }
 
-/* Custom styling for audio controls */
-#audio-container {
-    position: relative;
-    width: 300px; /* Adjust width as needed */
+
+.game {
+    height: 100%;
+    width: calc(100%);
+    flex-grow: 1;
+    background-size: cover;
 }
 
+.arrow {
+    background-image: url("../img/arrow.png");
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.75);
+}
 
+.left{
+    left:20px;
+    top: 50vh;
+}
 
-#audio-controls button {
-    background-color: #ED7D15; /* Green background */
-    color: white;
-    border: none;
-    padding: 10px 20px;
+.right{
+    right: 320px;
+    top: 50vh;
+    transform: rotate(180deg);
+}
+
+.forward{
+    left: calc(50vw - 150px);
+    transform: rotate(90deg);
+
+}
+.room-description {
+    position: absolute;
+    left: calc(50vw - 125px);
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    background-color: white;
+    font-size: 30px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+}
+
+.hand
+{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-size: cover;
 }
