--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -33,8 +33,8 @@
 
 .arrow {
     background-image: url("../img/arrow.png");
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     background-size: cover;
     position: absolute;
     background-color: rgba(255, 255, 255, 0.75);
@@ -62,9 +62,10 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
-    background-color: white;
+    background-color: #ED7D15;
     font-size: 30px;
     text-align: center;
+    color: white;
 }
 
 .hand
@@ -73,4 +74,15 @@
     width: 100px;
     height: 100px;
     background-size: cover;
+}
+
+#sign-out-btn
+{
+    background-color: #ED7D15;
+    width: 100px;
+    margin: 20px;
+    text-align: center;
+    color: white;
+    font-weight: bolder;
+
 }
