--- a/client/css/global.css
+++ b/client/css/global.css
@@ -34,3 +34,17 @@ body
     justify-content: center;
     align-items: center;
   }
+
+  .flyingtext
+  {
+    position: absolute;
+  }
+
+  .ball
+  {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    padding: 20px;
+  }
